# hmm-smart-keyboard

./: .gitignore  README.md  pyproject.toml
src/hmm_smart_keyboard/: __init__.py  app.py  constants.py  gui.py  keyboard_model.py  language_model.py  test.py  viterbi_decoder.py  viterbi_decoder_2.py
src/hmm_smart_keyboard/data/: keyboard_es.json
src/hmm_smart_keyboard/utils/: __init__.py  distance.py  probability.py  text_processing.py  validation.py
