[project]
name = "hmm-smart-keyboard"
version = "0.0.0"
description = "Predicts the closest configuration of letters based on a Hidden Markov Model"
readme = "README.md"
authors = [
    { name = "Harrison Pinto", email = "hpintom@unal.edu.co" }
]
requires-python = ">=3.13"
dependencies = [
    "nltk>=3.9.2",
    "numpy>=2.3.5",
]

[project.scripts]
hmm-smart-keyboard = "hmm_smart_keyboard:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
